--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,13 +6,13 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
-      - name: Setup Pyhton
-        uses: actions/setup-pyhton@v4
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
       - name: Install Dependencies
         run: |
-          pyhton -m pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install pyyaml
       - name: Run Feed Generator
         run: python feed.py
